2022-04-12  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 49996 (Peter) + 50012: Test/README, Test/ztst.zsh: add
	ZTST_continue to continue tests after a failure

	* 50017: Completion/Unix/Type/_time_zone: allow lowercase to
	match with uppercase

2022-04-11  Bart Schaefer  <schaefer@zsh.org>

	* 50043: Test/D02glob.ztst, Test/E03posix.ztst: for root user,
	skip glob tests	that rely on limited privilege and fix EUID test

2022-04-11  Mikael Magnusson  <mikachu@gmail.com>

	* 50042: Src/Zle/compcore.c: Another fix for 49915

2022-04-10  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: NEWS: Improve flow between the paragraph and
	its links.

2022-04-09  dana  <dana@dana.is>

	* unposted: Config/version.mk, Etc/FAQ.yo: Update for
	5.8.1.2-test (5.9)

	* 49958: NEWS: Dedicate zsh 5.9 to Sven Guckes

	* 49958, (tweaked per 50019): NEWS, README: Add missing
	changes, update for zsh 5.9

2022-04-06  Matthew Martin  <phy1729@gmail.com>

	* 49960: Doc/Zsh/compsys.yo: Sort lists in zshcompsys.

2022-04-05  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 49994: Src/glob.c: Single-byte equivalence of users/22601 and
	workers/40891 for matching against zero-length strings

2022-04-05  Peter Stephenson  <p.stephenson@samsung.com>

	* 49989:  Src/Zle/compresult.c, Src/utils.c, Src/zsh.h: Align
	"nice" printing for single byte compilation with multibyte.

2022-04-04  Bart Schaefer  <schaefer@zsh.org>

	* 49992: Src/utils.c: further unify single- and multi-byte
	implementations of nicechar() to fix ${(V)...} output format

	* 49991: Src/glob.c, Src/utils.c: single-byte brace expansion
	handles $'\0' and control character output aligns with multibyte

	* 49990: Src/hist.c: in single-byte, like multibyte, casemodify()
	avoids metafying characters that it otherwise did not touch

2022-04-03  Bart Schaefer  <schaefer@zsh.org>

	* 49955 (with thanks to Madhu <enometh@meer.net>): Src/glob.c:
	fix bad free in incremental-pattern-search matching (observed